feat: add media info in update body
