# pkg/api/generated_monuments_lieux_creation_body.go
@@ -89,6 +89,9 @@ type MonumentsLieuxCreationBody struct {
 	// linked pers physiques
 	LinkedPersPhysiques []int32 `json:"linkedPersPhysiques"`
 
+	// Map of media ID to title
+	MediaTitles map[string]string `json:"mediaTitles,omitempty"`
+
 	// draft
 	Draft bool `json:"draft,omitempty"`
 
