# pkg/api/generated_personne_morale_creation_body.go
@@ -89,6 +89,9 @@ type PersonneMoraleCreationBody struct {
 	// linked pers physiques
 	LinkedPersPhysiques []int32 `json:"linkedPersPhysiques"`
 
+	// Map of media ID to title
+	MediaTitles map[string]string `json:"mediaTitles,omitempty"`
+
 	// draft
 	Draft bool `json:"draft,omitempty"`
 
